--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,21 @@ dependencies:
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   uuid: ^4.5.2
-  audioplayers: ^6.5.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  audioplayers: ^6.5.1
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21 # Required for some newer Flutter versions
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -65,6 +71,7 @@ flutter:
   assets:
     - assets/ludo_board.png
     - assets/audio/
+    - assets/logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
